// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserProfileCard > renders avatar placeholder when no image 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="p-6 pt-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full h-20 w-20"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full text-2xl font-bold bg-primary/20 text-primary"
          >
            A
          </span>
        </span>
        <div
          class="flex-1"
        >
          <h1
            class="text-2xl font-bold"
          >
            Alice
          </h1>
        </div>
      </div>
      <div
        class="shrink-0 bg-border h-[1px] w-full my-4"
        data-orientation="horizontal"
        role="none"
      />
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
          <a
            class="text-primary hover:underline underline-offset-4"
            href="mailto:test@example.com"
          >
            test@example.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfileCard > renders minimal user 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="p-6 pt-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full h-20 w-20"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full text-2xl font-bold bg-primary/20 text-primary"
          >
            T
          </span>
        </span>
        <div
          class="flex-1"
        >
          <h1
            class="text-2xl font-bold"
          >
            Test User
          </h1>
        </div>
      </div>
      <div
        class="shrink-0 bg-border h-[1px] w-full my-4"
        data-orientation="horizontal"
        role="none"
      />
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
          <a
            class="text-primary hover:underline underline-offset-4"
            href="mailto:test@example.com"
          >
            test@example.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfileCard > renders user with all fields 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="p-6 pt-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full h-20 w-20"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full text-2xl font-bold bg-primary/20 text-primary"
          >
            J
          </span>
        </span>
        <div
          class="flex-1"
        >
          <h1
            class="text-2xl font-bold"
          >
            Jane Doe
          </h1>
          <p
            class="text-muted-foreground"
          >
            Senior Developer
             at 
            Acme Corp
          </p>
        </div>
      </div>
      <div
        class="shrink-0 bg-border h-[1px] w-full my-4"
        data-orientation="horizontal"
        role="none"
      />
      <p
        class="whitespace-pre-wrap"
      >
        Software engineer passionate about open source
      </p>
      <div
        class="shrink-0 bg-border h-[1px] w-full my-4"
        data-orientation="horizontal"
        role="none"
      />
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
          <a
            class="text-primary hover:underline underline-offset-4"
            href="mailto:jane@example.com"
          >
            jane@example.com
          </a>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-building2 lucide-building-2 w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
            />
            <path
              d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
            />
            <path
              d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
            />
            <path
              d="M10 6h4"
            />
            <path
              d="M10 10h4"
            />
            <path
              d="M10 14h4"
            />
            <path
              d="M10 18h4"
            />
          </svg>
          <span>
            Acme Corp
          </span>
        </div>
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-briefcase w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"
            />
            <rect
              height="14"
              rx="2"
              width="20"
              x="2"
              y="6"
            />
          </svg>
          <span>
            Senior Developer
          </span>
        </div>
        <div
          class="flex items-start gap-3"
        >
          <span
            class="text-muted-foreground text-sm"
          >
            Interests:
          </span>
          <div
            class="flex flex-wrap gap-1"
          >
            <div
              class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground px-2 py-0.5 text-[10px]"
            >
              TypeScript
            </div>
            <div
              class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground px-2 py-0.5 text-[10px]"
            >
              React
            </div>
            <div
              class="inline-flex items-center rounded-md border font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground px-2 py-0.5 text-[10px]"
            >
              Convex
            </div>
          </div>
        </div>
        <div
          class="flex items-start gap-3 p-3 rounded-lg bg-success/10"
        >
          <div
            class="flex-shrink-0 mt-0.5 [&>svg]:h-5 [&>svg]:w-5 text-success"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-hand-helping"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 12h2a2 2 0 1 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 14"
              />
              <path
                d="m7 18 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a2 2 0 0 0-2.75-2.91l-4.2 3.9"
              />
              <path
                d="m2 13 6 6"
              />
            </svg>
          </div>
          <div>
            <span
              class="text-sm font-semibold text-success"
            >
              Can help with:
            </span>
            <div
              class="text-sm mt-1"
            >
              <p
                class="whitespace-pre-wrap"
              >
                Code reviews, architecture discussions
              </p>
            </div>
          </div>
        </div>
        <div
          class="flex items-start gap-3 p-3 rounded-lg bg-info/10"
        >
          <div
            class="flex-shrink-0 mt-0.5 [&>svg]:h-5 [&>svg]:w-5 text-info"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-circle-help"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <path
                d="M12 17h.01"
              />
            </svg>
          </div>
          <div>
            <span
              class="text-sm font-semibold text-info"
            >
              Looking for help with:
            </span>
            <div
              class="text-sm mt-1"
            >
              <p
                class="whitespace-pre-wrap"
              >
                Mobile development, DevOps
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserProfileCard > renders with request meeting button when callback provided 1`] = `
<div>
  <div
    class="rounded-xl border bg-card text-card-foreground shadow"
  >
    <div
      class="p-6 pt-6"
    >
      <div
        class="flex items-start gap-4"
      >
        <span
          class="relative flex shrink-0 overflow-hidden rounded-full h-20 w-20"
        >
          <span
            class="flex h-full w-full items-center justify-center rounded-full text-2xl font-bold bg-primary/20 text-primary"
          >
            B
          </span>
        </span>
        <div
          class="flex-1"
        >
          <h1
            class="text-2xl font-bold"
          >
            Bob Smith
          </h1>
        </div>
      </div>
      <div
        class="shrink-0 bg-border h-[1px] w-full my-4"
        data-orientation="horizontal"
        role="none"
      />
      <div
        class="space-y-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-mail w-5 h-5 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
            />
            <rect
              height="16"
              rx="2"
              width="20"
              x="2"
              y="4"
            />
          </svg>
          <a
            class="text-primary hover:underline underline-offset-4"
            href="mailto:test@example.com"
          >
            test@example.com
          </a>
        </div>
      </div>
      <div
        class="flex justify-end mt-6"
      >
        <button
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground shadow hover:bg-primary/90 h-9 px-4 py-2"
        >
          Request a Meeting
        </button>
      </div>
    </div>
  </div>
</div>
`;
